--- a/resources/sass/partials/_common.scss
+++ b/resources/sass/partials/_common.scss
@@ -164,3 +164,7 @@ p {
         color: #df9367;
     }
 }
+
+input:checked {
+    background-color: #df9367;
+}
