--- a/resources/sass/partials/_navbar.scss
+++ b/resources/sass/partials/_navbar.scss
@@ -1,1 +1,41 @@
+.navbar {
+    background-color: $darkbrown;
 
+    .navbar-brand {
+        color: $darkwhite;
+        font-weight: 600;
+        font-size: 1.5em;
+    }
+
+    .navbar-toggler {
+        border: 1px solid $darkwhite;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 3px 5px;
+
+        .navbar-toggler-icon {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: $darkwhite !important;
+        }
+    }
+
+
+
+    .navbar-nav {
+        .nav-item {
+            margin-left: 5px;
+
+            .nav-link {
+                color: $darkwhite;
+
+                &:hover {
+                    color: $lightpink;
+                }
+            }
+        }
+    }
+
+}
